[package]
name = "zapper-xyz-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
description = "API client for zapper.xyz"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/DenisGorbachev/zapper-xyz-api"
repository = "https://github.com/DenisGorbachev/zapper-xyz-api"
readme = "README.md"
keywords = []
categories = []
exclude = [
    ".*",
    "*.local.*",
    "doc/dev",
    "specs",
    "AGENTS.ts",
    "README.ts",
    "AGENTS*.md",
    "CLAUDE*.md",
    "deno.lock",
    "deno.json",
    "commitlint.config.mjs",
    "fnox.toml",
    "lefthook.yml",
    "mise.toml",
    "rumdl.toml",
    "rustfmt.toml",
    ".yolobox"
]

[package.metadata.details]
title = "API client for zapper.xyz"
tagline = ""
summary = ""
announcement = ""
readme = { generate = true }

[dependencies]
derive-new = "0.7"
graphql_client = { version = "0.16", features = ["graphql_query_derive"] }
errgonomic = "0.5"
governor = "0.10"
reqwest = { version = "0.13", features = ["json", "query"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
timestamp-please = { version = "0.2", features = ["serde"] }
url = "2"
url-macro = "0.2"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "net"] }
non-empty-str = { version = "0.11", features = ["serde"] }
derive_more = { version = "2", default-features = false, features = ["as_ref", "display", "from", "into"] }

#derive-getters = { version = "0.5.0", features = ["auto_copy_getters"] }
#derive-new = "0.7.0"
#derive_more = { version = "2.1.1", features = ["full"] }
#errgonomic = { git = "https://github.com/DenisGorbachev/errgonomic" }
#itertools = "0.14.0"
#standard-traits = { git = "https://github.com/DenisGorbachev/standard-traits" }
#strum = { version = "0.27.2", features = ["derive"] }
#stub-macro = { version = "0.2.1" }
#subtype = { git = "https://github.com/DenisGorbachev/subtype" }
